UI: adjust the z-index for popover elements to avoid scrolling above … (#6940)
* UI: adjust the z-index for popover elements to avoid scrolling above the metabar. (#32769)

https://mantis.ilias.de/view.php?id=32769

This mantis ticket is solved partly. After consideration it was decided
to exchange the current webui-popover jquery library with another library in the
future, because it's not maintained anymore and hasn't been for a few
years. For this task an entry was written in the UI ROADMAP.

* UI: update the Roadmap regarding the exchange of the webui-popover library. (#32769)

(cherry picked from commit fa9ccd050a210a573d415ca7bfefe9582e8d4192)

--- a/public/templates/default/delos.css
+++ b/public/templates/default/delos.css
@@ -7200,7 +7200,7 @@ div.alert ul > li:before {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 997;
   display: none;
   min-width: 50px;
   min-height: 32px;
@@ -7466,7 +7466,7 @@ div.alert ul > li:before {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9998;
+  z-index: 996;
 }
 
 .webui-popover .dropdown-menu {
